Fixed hovering on mobile

--- a/src/sass/_game.scss
+++ b/src/sass/_game.scss
@@ -39,7 +39,7 @@
   margin: 0 10px; 
 }
 
-.box-option:hover {
+.box-option-hover {
   -webkit-animation-name: hvr-buzz;
   animation-name: hvr-buzz;
   -webkit-animation-duration: 0.15s;
